CS59 Final Project/gen/AutogradeParser.java
// Generated from /Users/warrenshepard/IdeaProjects/CS59 Final Project/Autograde.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AutogradeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DIGIT=1, LETTER=2, SEMICOLON=3, LBRACK=4, RBRACK=5, LPREN=6, RPREN=7, 
		EQUAL=8, COLON=9, FALSE=10, TRUE=11, COMMA=12, DOT=13, UNDERSCORE=14, 
		SLASH=15, NEW=16, STRING=17, WS=18, CONFIGURE=19, POINTS=20, TEST_CASES=21, 
		FUNCTION=22, DUE_DATE=23, LATE_PENALTY=24, EARLY_TIME=25, EARLY_REWARD=26, 
		LANGUAGE=27, FUNCTIONS=28;
	public static final int
		RULE_start = 0, RULE_list = 1, RULE_expr = 2, RULE_new = 3, RULE_variable = 4, 
		RULE_test_list = 5, RULE_test_item = 6, RULE_input_list = 7, RULE_input = 8, 
		RULE_expected_output = 9, RULE_points = 10, RULE_configure = 11, RULE_config_list = 12, 
		RULE_config_item = 13, RULE_config_key = 14, RULE_config_value = 15, RULE_function_list = 16, 
		RULE_method_call = 17, RULE_method_list = 18, RULE_method_item = 19, RULE_method_item_val = 20, 
		RULE_id = 21, RULE_submission_time = 22, RULE_name = 23, RULE_function_name = 24, 
		RULE_num = 25, RULE_decimal = 26, RULE_bool = 27, RULE_string_literal = 28, 
		RULE_date = 29, RULE_time = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "list", "expr", "new", "variable", "test_list", "test_item", 
			"input_list", "input", "expected_output", "points", "configure", "config_list", 
			"config_item", "config_key", "config_value", "function_list", "method_call", 
			"method_list", "method_item", "method_item_val", "id", "submission_time", 
			"name", "function_name", "num", "decimal", "bool", "string_literal", 
			"date", "time"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "';'", "'{'", "'}'", "'('", "')'", "'='", "':'", "'False'", 
			"'True'", "','", "'.'", "'_'", "'/'", "'new'", null, null, "'configure'", 
			"'points'", "'test_cases'", "'function'", "'due_date'", "'late_penalty'", 
			"'early_time'", "'early_reward'", "'language'", "'functions'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DIGIT", "LETTER", "SEMICOLON", "LBRACK", "RBRACK", "LPREN", "RPREN", 
			"EQUAL", "COLON", "FALSE", "TRUE", "COMMA", "DOT", "UNDERSCORE", "SLASH", 
			"NEW", "STRING", "WS", "CONFIGURE", "POINTS", "TEST_CASES", "FUNCTION", 
			"DUE_DATE", "LATE_PENALTY", "EARLY_TIME", "EARLY_REWARD", "LANGUAGE", 
			"FUNCTIONS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Autograde.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AutogradeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			list(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		return list(0);
	}

	private ListContext list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ListContext _localctx = new ListContext(_ctx, _parentState);
		ListContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(65);
			expr();
			}
			_ctx.stop = _input.LT(-1);
			setState(71);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_list);
					setState(67);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(68);
					expr();
					}
					} 
				}
				setState(73);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public NewContext new_() {
			return getRuleContext(NewContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ConfigureContext configure() {
			return getRuleContext(ConfigureContext.class,0);
		}
		public Test_listContext test_list() {
			return getRuleContext(Test_listContext.class,0);
		}
		public Method_callContext method_call() {
			return getRuleContext(Method_callContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				new_();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				variable();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				configure();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				test_list();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				method_call();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NewContext extends ParserRuleContext {
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public TerminalNode EQUAL() { return getToken(AutogradeParser.EQUAL, 0); }
		public TerminalNode NEW() { return getToken(AutogradeParser.NEW, 0); }
		public TerminalNode LPREN() { return getToken(AutogradeParser.LPREN, 0); }
		public TerminalNode RPREN() { return getToken(AutogradeParser.RPREN, 0); }
		public NewContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_new; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterNew(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitNew(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitNew(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NewContext new_() throws RecognitionException {
		NewContext _localctx = new NewContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_new);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			name();
			setState(82);
			match(EQUAL);
			setState(83);
			match(NEW);
			setState(84);
			name();
			setState(85);
			match(LPREN);
			setState(86);
			match(RPREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(AutogradeParser.EQUAL, 0); }
		public Test_listContext test_list() {
			return getRuleContext(Test_listContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			name();
			setState(89);
			match(EQUAL);
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACK:
				{
				setState(90);
				test_list();
				}
				break;
			case LETTER:
				{
				setState(91);
				id();
				}
				break;
			case DIGIT:
			case DOT:
				{
				setState(92);
				num();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Test_listContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(AutogradeParser.LBRACK, 0); }
		public List<Test_itemContext> test_item() {
			return getRuleContexts(Test_itemContext.class);
		}
		public Test_itemContext test_item(int i) {
			return getRuleContext(Test_itemContext.class,i);
		}
		public TerminalNode RBRACK() { return getToken(AutogradeParser.RBRACK, 0); }
		public Test_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterTest_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitTest_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitTest_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_listContext test_list() throws RecognitionException {
		Test_listContext _localctx = new Test_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_test_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(LBRACK);
			setState(96);
			test_item();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 142358L) != 0)) {
				{
				{
				setState(97);
				test_item();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Test_itemContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(AutogradeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AutogradeParser.COMMA, i);
		}
		public Expected_outputContext expected_output() {
			return getRuleContext(Expected_outputContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(AutogradeParser.SEMICOLON, 0); }
		public Input_listContext input_list() {
			return getRuleContext(Input_listContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public PointsContext points() {
			return getRuleContext(PointsContext.class,0);
		}
		public Test_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterTest_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitTest_item(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitTest_item(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_itemContext test_item() throws RecognitionException {
		Test_itemContext _localctx = new Test_itemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_test_item);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACK:
				{
				setState(105);
				input_list();
				}
				break;
			case DIGIT:
			case LETTER:
			case FALSE:
			case TRUE:
			case DOT:
			case STRING:
				{
				setState(106);
				input();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(109);
			match(COMMA);
			setState(110);
			expected_output();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(111);
				match(COMMA);
				setState(112);
				points();
				}
			}

			setState(115);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Input_listContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(AutogradeParser.LBRACK, 0); }
		public List<InputContext> input() {
			return getRuleContexts(InputContext.class);
		}
		public InputContext input(int i) {
			return getRuleContext(InputContext.class,i);
		}
		public TerminalNode RBRACK() { return getToken(AutogradeParser.RBRACK, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AutogradeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AutogradeParser.COMMA, i);
		}
		public Input_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterInput_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitInput_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitInput_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Input_listContext input_list() throws RecognitionException {
		Input_listContext _localctx = new Input_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_input_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(LBRACK);
			setState(118);
			input();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(119);
				match(COMMA);
				setState(120);
				input();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputContext extends ParserRuleContext {
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public String_literalContext string_literal() {
			return getRuleContext(String_literalContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_input);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIGIT:
			case DOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				num();
				}
				break;
			case FALSE:
			case TRUE:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				bool();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				string_literal();
				}
				break;
			case LETTER:
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				id();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expected_outputContext extends ParserRuleContext {
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public String_literalContext string_literal() {
			return getRuleContext(String_literalContext.class,0);
		}
		public Expected_outputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expected_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterExpected_output(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitExpected_output(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitExpected_output(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expected_outputContext expected_output() throws RecognitionException {
		Expected_outputContext _localctx = new Expected_outputContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expected_output);
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIGIT:
			case DOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				num();
				}
				break;
			case FALSE:
			case TRUE:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				bool();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				string_literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PointsContext extends ParserRuleContext {
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public TerminalNode POINTS() { return getToken(AutogradeParser.POINTS, 0); }
		public TerminalNode EQUAL() { return getToken(AutogradeParser.EQUAL, 0); }
		public PointsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_points; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterPoints(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitPoints(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitPoints(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PointsContext points() throws RecognitionException {
		PointsContext _localctx = new PointsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_points);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIGIT:
			case DOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				num();
				}
				break;
			case POINTS:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(POINTS);
				setState(141);
				match(EQUAL);
				setState(142);
				num();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConfigureContext extends ParserRuleContext {
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode DOT() { return getToken(AutogradeParser.DOT, 0); }
		public TerminalNode CONFIGURE() { return getToken(AutogradeParser.CONFIGURE, 0); }
		public TerminalNode LBRACK() { return getToken(AutogradeParser.LBRACK, 0); }
		public Config_listContext config_list() {
			return getRuleContext(Config_listContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(AutogradeParser.RBRACK, 0); }
		public TerminalNode UNDERSCORE() { return getToken(AutogradeParser.UNDERSCORE, 0); }
		public ConfigureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).enterConfigure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutogradeListener ) ((AutogradeListener)listener).exitConfigure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutogradeVisitor ) return ((AutogradeVisitor<? extends T>)visitor).visitConfigure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConfigureContext configure() throws RecognitionException {
		ConfigureContext _localctx = new ConfigureContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_configure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			id();
			setState(146);
			match(DOT);
			setState(147);
			match(CONFIGURE);
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==UNDERSCORE) {
				{
				setState(148);
				match(UNDERSCORE);
				setState(149);
				id();
				}
			}
